css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1em; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote:before, blockquote:after, q:before, q:after {
  content: '';
  content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

/* apply a natural box layout model to all elements */
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

/* End of reset */


body { background-color: white; font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: black; }
h1 { line-height: 0.8em; font-size: 3em; position:relative; padding-left: 3.5em; color: white; }
a { color: inherit; }

.moreinfo {
	position: fixed;
	background-color: black;
	font-size: 1.5em;
	line-height: 1.2em;
	color: white;
	text-align: center;
	overflow: hidden;
	left: 0px;
	top: 0px;
	display: table;
	transition: left 0.15s ease, top 0.15s ease, width 0.15s ease, height 0.15s ease, font-size 0.15s ease;
}
.moreinfo .close {
	font-size:1.5em;
	position: absolute;
	right: 0;
	top: 0;
	padding: 0.2em 0.25em;
	cursor: pointer;
	z-index: 10;
}

.c1-bg { background-color: #2254F4; }
.c2-bg { background-color: #178CFF; }
.c3-bg { background-color: #00B6FF; }
.c4-bg { background-color: #08DEF9; }
.c5-bg { background-color: #1DD3A7; }
.c6-bg { background-color: #0DBC37; }
.c7-bg { background-color: #67E767; }
.c8-bg { background-color: #722EA5; }
.c9-bg { background-color: #E6007C; }
.c10-bg { background-color: #EF3AAB; }
.c11-bg { background-color: #D73058; }
.c12-bg { background-color: #D60303; }
.c13-bg { background-color: #FF6700; }
.c14-bg { background-color: #F9BC26; }
.b1-bg { background-color: #000000; }
.b2-bg { background-color: #333333; }
.b3-bg { background-color: #999999; }

.header {
	line-height: 2em;
	position: relative;
}
.main {
	overflow: hidden;
	position: relative;
}
.dashboard {
	position: relative;
	padding-top: 3px;
	margin-left: -3px;
	margin-right: -3px;
	bottom: 0px;
	vertical-align: top;
}
.boxholder {
	display: inline-block;
	width: 12.5%;	/* 8 columns for wide screens */
	margin: 0px;
	height: 245px;
	padding: 3px;
	vertical-align: top;
	/*margin-top: -3px;*/
}
.box {
	height: 100%;
	position: relative;
	display: table;
	width: 100%;
}
.dashboard .panel .more {
	display: none;
}
.moreinfo .panel .less {
	display: none;
}
.panel {
	display: table-cell;
	vertical-align: middle;
	color: white;
	text-align: center;
}
.panel .number, .moreinfo .number {
	position: relative;
	line-height: 1em;
	margin: auto;
	text-align: center;
	display: block;
	font-size: 6em;
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-ms-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
.panel .title, .moreinfo .title {
	display: block;
	opacity: 0.6;
	line-height: 1em;
	font-size: 1.8em;
	margin-bottom: 0.5em;
}
.panel .updated, .moreinfo .updated {
	position: absolute;
	bottom: 0.25em;
	font-size: 0.8em;
	width: 100%;
	text-align: center;
	color: white;
	opacity: 0.3;
	line-height: 1.5em;
}
.panel:hover .updated,.panel:hover .title {
	opacity: 1;
}
.panel .updated a {
	text-decoration: none;
	color: inherit;
}
.panel:hover .updated a {
	text-decoration: underline;
}
.panel:hover .number {
	font-size: 7.2em;
}
.panel .icons, .panel .list {
	width: 90%;
	margin: auto;
	text-align: center;
}
.panel .list li { padding: 0.5em; }
.panel .icons a { display: block; width: 100%; padding: 0 0.25em; }
.panel .icons img { width: 100%; }
.panel .icons img:hover { background-color: rgba(255,255,255,0.3); }
.panel li {
	display: inline-block;
	width: 25%;
}
.partners li {
	display: inline-block;
	width: 50%;
}
.projects li {
	width: 25%;
	height: 3em;
}
.graph {
	width: 90%;
	display: block;
	margin: auto;
	margin-top: 1em;
	text-align: center;
	position: relative;
}
.graph table {
	margin: auto;
	width: 100%;
	margin-bottom: 0.5em;
}
.graph table td {
	border-right: 1px solid transparent;
	position: relative;
	padding-bottom: 1.5em;
}
.graph table .bar {
	width: 100%;
	background-color: white;
	border-bottom: 1px solid white;
}
.graph table .date {
	position: absolute;
	left: 0px;
	border-left: 1px solid white;
	padding-left: 0.25em;
	padding-top: 0.25em;
}
.graph .grid {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
}
.graph .grid .line {
	width: 100%;
	border-bottom: 1px solid white;
	opacity: 0.5;
	position: absolute;
	text-align: right;
}
.graph .grid .line span {
}
.header { padding: 16px 16px 10px 16px; }
.header h1 img { position: absolute; top: -53%; left: -1em; height: 2em; }
select#range {
	height: 1em;
	font: inherit;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	border: 1px solid transparent !important;
	border-radius: 4px;
	background-color: black;
	line-height: inherit;
	cursor: pointer;
	background: url('dropdown-white.png') no-repeat right center;
	background-size: 1em 100%;
	padding-right: 1em;
	color: white!important;
}
select#range option {
	padding-top: 0.25em;
	background-color: black;
	color: white!important;
}
select#range:hover, select#range:focus {
	border: 1px solid rgba(0,0,0,0.4)!important;
	background: url('dropdown-white.png') no-repeat right center;
	background-size: 1em 100%;
}
p.more { font-size: 0.8em; margin-bottom: 1em; }

@media only screen and (max-width: 3000px) {
	.boxholder { width: 16.66666666%; }
}
@media only screen and (max-width: 2600px) {
	.boxholder { width: 25%; }
	.moreinfo .panel li { width: 20%; }
}
@media only screen and (max-width: 2100px) {
	.boxholder { width: 25%; }
	.moreinfo .panel li { width: 20%; }
}
@media only screen and (max-width: 2000px) {
	.boxholder { width: 33.333333333%; height: 300px; font-size: 1.5em; }
	.moreinfo .panel li { width: 25%; }
}
@media only screen and (max-width: 1280px) {
	.boxholder { width: 33.333333333%; }
	.moreinfo .panel li { width: 25%; }
}
@media only screen and (max-width: 1000px) {
	.boxholder { width: 50%; }
	.moreinfo .panel li { width: 33.333333%; }
}
@media only screen and (max-width: 700px) {
	.header {
		padding: 0.5em 0.4em 0em 0.4em;
	}
	.header h1 {
		padding-left: 0px;
	}
	.header h1 img {
		display: block;
		position: relative;
		left: 0px;
		top: 0px;
		height: 1.5em;
		margin: auto;
	}
	.main {
		width: 100%;
		overflow: hidden;
	}
	select#range {
		width: 100%;
	}
	.boxholder { width: 100%; }
	.moreinfo .panel li { width: 50%; }
}

